--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular-bootstrap-md": "^5.2.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "chart.js": "^2.5.0",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "mongodb": "^3.0.4",
     "mongoose": "^5.0.10",
     "passport": "^0.4.0",
